// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctyl render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling 
    $1,140.00
  </h1>
</div>
`;

exports[`Should correctyl render ExpensesSummary with single expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $1,095.00
  </h1>
</div>
`;
